fixed main-catalog__list align-items

--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -2,7 +2,7 @@
   padding-top: 4px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 }
 
 .main-catalog__list {
